--- a/members/templates/members/profile.html
+++ b/members/templates/members/profile.html
@@ -64,27 +64,31 @@
                     <!-- Favourite Guitars -->
                     <div class="row">
                         <h4 class="mt-5 gold-txt">Favourited Guitars</h4>
-                        
-                        <table class="text-center mx-auto subs-table">
-                            <tr>
-                                <th>Guitar</th>
-                                <th>Tier</th>
-                                
-                            </tr>
+                    </div>
+                    <div class="row">
                         {% for guitar in guitars %}
                             
                             {% if request.user in guitar.favourites.all %}
-                                <tr>
-                                    <td>{{ guitar.brand }} - {{ guitar.guitar_model }}</td>
-                                    <td>{{ guitar.tier }}</td>
-                                </tr>
+                            <div class="col-3">
+                                <div class="guitar-mini-image-container">
+                                    {% if guitar.image_id %}
+                                    <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
+                                        <img src="{{ guitar.image_id.url }}" class="fav-img" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
+                                    </a>
+
+                                    {% else %}
+                                    <a href="{% url 'guitar_detail' guitar.id %}" class="guitar-image-link">
+                                        <img src="{{ MEDIA_URL }}noimage.png" class="fav-img" alt="{{ guitar.brand }} {{ guitar.guitar_model }}">
+                                    </a>
+                                    {% endif %}
+                                </div>
+                            </div>
                             {% endif %}
-                        
                         <!--OUTSTANDING BUG: Empty tag is not displaying if user has no favourite guitars?-->
                         {% empty %}
                             <p class="text-center">You have no favourite guitars.</p>
                         {% endfor %}
-
+                        
                     </div>
                 </div>
             </div>
