--- a/static/css/base.css
+++ b/static/css/base.css
@@ -549,11 +549,11 @@ select option[value=""] {
 }
 
 .fav-img {
-    max-height: 10vh;
+    height: 25vh;
+    max-width:100%;
     display: block;
-    -o-object-fit: contain;
-       object-fit: contain;
-    aspect-ratio: 3 / 2;
+    -o-object-fit: cover;
+       object-fit: cover;
     overflow: hidden;
 }
 
