--- a/static/css/base.css
+++ b/static/css/base.css
@@ -266,7 +266,9 @@ body {
     color:var(--off-black);
 }
 
-
+.btn-wide {
+    width:25vw;
+}
 /*---Index.html-------------------------------------------*/
 
 
