--- a/templates/base.html
+++ b/templates/base.html
@@ -313,12 +313,16 @@
                   <p>A: At the moment we can only allow members to take a lower tiered guitar.</p>
                 </div>
                 <div class="row">
-                  <h4 class="gold-txt"> Q: If I take a lower tiered guitar will I be reimbursed?</h4>
-                  <p>A: At the end of 12 months, your total loans will be assessed. If you have a difference (i.e. plectrum tokens not used, or number used for lower tiered items) we will look at offering a discount for the next 12 months.</p>
+                  <h4 class="gold-txt"> Q: If I take a lower tiered guitar will I be reimbursed the difference?</h4>
+                  <p>A: No, but we would like to know the reason why you opted to take a lower tiered guitar so that we can ensure we have the instruments available to you that you desire. Please also keep a look out for the members polls where we want our users to have a say as we expand the vault's offerings.</p>
                 </div>
                 <div class="row">
-                  <h4 class="gold-txt"> Q: Can I cancel?</h4>
-                  <p>A: You can request to change (upgrade / downgrade) or cancel at anytime. Note that if you request to cancel or downgrade and have a guitar currently loaned this will not be acted upon until the guitar has been returned.</p>
+                  <h4 class="gold-txt"> Q: Can I cancel at anytime?</h4>
+                  <p>A: You can request to cancel at anytime and any unused plectrums (on site token used to load a guitar) will be reimbursed - no questions asked! Just head to your profile page to manage your active subscription plan. Note if you have a guitar currently loaned cancellation requests will not be acted upon until the guitar has been returned.</p>
+                </div>
+                <div class="row">
+                  <h4 class="gold-txt"> Q: Can I upgrade / downgrade my tier?</h4>
+                  <p>A: The simplest approach is to activate a new subscription at the tier your require and cancel your existing plan. We will reimburse you for any unspent plectrums on your existing plan once cancelled.</p>
                 </div>
               </div>
             </div>
