--- a/subscriptions/templates/subscriptions/subscriptions.html
+++ b/subscriptions/templates/subscriptions/subscriptions.html
@@ -36,15 +36,17 @@
                 <!--Subscription Cards-->
                 <div class="row">
                     {% for subscription in subscriptions %}
-                        <div class="col-12 col-md-6 col-lg-3 mb-2">                        
-                            <div class="card subs-card
-                            {% if subscription.name == 'Platinum' %}plat-subs-card
-                            {% elif subscription.name == 'Gold' %}gold-subs-card
-                            {% elif subscription.name == 'Silver' %}silver-subs-card
-                            {% elif subscription.name == 'Bronze' %}bronze-subs-card
-                            {% endif %}">
-                                <div class="card-body">
+                        <div class="col-12 col-md-6 col-lg-3 mb-2">
+                              
+                            <div class="card subs-card">
+                                <div class="card-header {% if subscription.name == 'Platinum' %}plat-subs-card
+                                {% elif subscription.name == 'Gold' %}gold-subs-card
+                                {% elif subscription.name == 'Silver' %}silver-subs-card
+                                {% elif subscription.name == 'Bronze' %}bronze-subs-card
+                                {% endif %}">
                                     <h5 class="card-title display-6 text-center"><strong>{{ subscription.name|upper }}</strong></h5>
+                                </div>   
+                                <div class="card-body subs-card-body">
                                     <div class="d-flex flex-row">
                                         <p class="col-6">Monthly Price:</p>
                                         <p class="card-text">£{{ subscription.price }}</p>
@@ -66,7 +68,7 @@
                                     <!--Add subscription package to bag-->
                                     <form class="form" action="{% url 'add_to_bag' subscription.id %}" method="POST">
                                         {% csrf_token %}
-                                        <input type="submit" class="rounded-pill btn-gold-outline text-center mx-auto w-100
+                                        <input type="submit" class="rounded-pill sub-btn text-center mx-auto w-100
                                         {% if subscription.name == 'Platinum' %}plat-sub-btn
                                         {% elif subscription.name == 'Gold' %}gold-sub-btn
                                         {% elif subscription.name == 'Silver' %}silver-sub-btn
