--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -122,23 +122,24 @@
                                                 
                                                 {% endif %}
 
-                                            <li class="list-inline-item w-20 pb-0 align-baseline">
-                                                
+                                            
+                                                <li class="list-inline-item w-20 pb-0 align-baseline">
+                                                    {% if guitar.status == 'Available' %}
+                                                        <!--option A : Add to Rack -->
+                                                        <btn type="button" class="btn btn-sm btn-take align-baseline">
+                                                            <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                            <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
+                                                            <p class=""><small>Add to Rack</small></p>
+                                                        </btn>
 
-                                                <!--option A : Add to Rack -->
-                                                <btn type="button" class="btn btn-sm btn-take align-baseline">
-                                                    <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
-                                                    <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
-                                                    <p class=""><small>Add to Rack</small></p>
-                                                </btn>
-
-                                                <!--option B : Remove from Rack -->
-                                                <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
-                                                    <img src="{{ MEDIA_URL }}guitar_gold_remove.svg" class="guitar-svg add-gold">
-                                                    <img src="{{ MEDIA_URL }}guitar_black_remove.svg" class="guitar-svg add-black">
-                                                    <p class="ps-2"><small>Remove from Rack</small></p>
-                                                </btn>
-                                            </li>
+                                                        <!--option B : Remove from Rack -->
+                                                        <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
+                                                            <img src="{{ MEDIA_URL }}guitar_gold_remove.svg" class="guitar-svg add-gold">
+                                                            <img src="{{ MEDIA_URL }}guitar_black_remove.svg" class="guitar-svg add-black">
+                                                            <p class="ps-2"><small>Remove from Rack</small></p>
+                                                        </btn>
+                                                    {% endif %}
+                                                </li>
                                         </ul>
                                     {% endif %}
                                 </div>      <!--close card footer -->
