Site Admin - added link to main admin console

--- a/site_admin/templates/site_admin/site_admin.html
+++ b/site_admin/templates/site_admin/site_admin.html
@@ -17,7 +17,11 @@
             <div class="row">
                 <div class="col main-content mt-1">
                     <h1 class="gold-special-txt my-4">Site Administration</h1>
-
+                    <div>
+                        <p>Please use the pre-built forms below to manage items. A link to the main admin panel has been provided should the required action not be permitted via the forms and should be used as a last resort.</p>
+                        <a href="{% url 'admin:index' %}" class="btn btn-lg btn-wide btn-gold-outline mb-4">Link to main admin console</a>
+                    </div>
+                    
            
                 </div> <!--close main central column-->
             </div>
